# CIFAR-10_Classifier_Custom

./: .dockerignore  .gitignore  CIFAR.pth  CIFAR_ResNet.py  CIFAR_classifier.py  Dockerfile  pyproject.toml
.github/workflows/: MiniKubeCD.yml  docker-image.yml
inference/: api.py  model_loader.py
k8s/: deployment.yaml  service.yaml
src/: CIFAR_ResNet.py  CIFAR_classifier.py  model.py
